[package]
edition = "2021"
name = "control_flow"
version = "0.1.0"

[[bin]]
name = "celsius"
path = "src/celsius.rs"

[[bin]]
name = "fibonacci"
path = "src/fibonacci.rs"

[[bin]]
name = "christmas"
path = "src/christmas.rs"

[profile.release]
debug = false
opt-level = 2
strip = true
lto = true


#codegen-units = 1   # Reduce number of codegen units to increase optimizations
